<?xml version="1.0" encoding="utf-8"?>
<!--
  strings.xml
  Mobile Messaging SDK

  Copyright (c) 2016-2025 Infobip Limited
  Licensed under the Apache License, Version 2.0
-->
<resources>
    <!-- Main activity -->
    <string name="main_activity_title">Messages</string>
    <string name="main_activity_message_count_default">0</string>
    <string name="main_activity_total_received">"Received messages: "</string>

    <!-- Menu -->
    <string name="menu_action_gsm">GSM number</string>
    <string name="menu_action_registration_id">Registration ID</string>
    <string name="menu_action_erase">Erase inbox</string>
    <string name="menu_action_enable_primary">Enable primary</string>
    <string name="menu_action_disable_primary">Disable primary</string>
    <string name="menu_action_personalize">Personalize</string>
    <string name="menu_action_personalize_force">Personalize (force depersonalize)</string>
    <string name="menu_action_personalize_keep_as_lead">Personalize (keep as lead)</string>
    <string name="menu_action_personalize_set_as_primary">Personalize (set as primary)</string>
    <string name="menu_action_depersonalize">Depersonalize</string>

    <!-- Dialogs -->
    <string name="dialog_title_gsm">GSM</string>
    <string name="dialog_title_registration_id">Registration ID</string>
    <string name="dialog_title_personalize">External User ID</string>
    <string name="dialog_action_save">Save</string>

    <!-- Toast messages -->
    <string name="toast_user_data_saved">User data saved</string>
</resources>