<?xml version="1.0" encoding="utf-8"?>
<!--
  menu_main.xml
  Mobile Messaging SDK

  Copyright (c) 2016-2025 Infobip Limited
  Licensed under the Apache License, Version 2.0
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.MainActivity" >


    <item
        android:id="@+id/action_erase"
        android:title="@string/menu_action_erase"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_registration_id"
        android:title="@string/menu_action_registration_id"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_phone"
        android:title="@string/menu_action_gsm"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_primary"
        android:title="@string/menu_action_enable_primary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_depersonalize"
        android:title="@string/menu_action_depersonalize"
        app:showAsAction="never" />

</menu>
